[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.10"
rocket = "0.5.0-rc.2"
tokio = "1.26.0"
rocket_db_pools = {version = "0.1.0-rc.2", features = ["sqlx_mysql"]}

